add root api
